--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<div class="app">
+<div class="h-100">
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="index.html">
       <img src="assets/images/logo-dark.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
