--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -10,13 +10,13 @@
     <div class="collapse navbar-collapse" id="navbarContent">
       <ul class="nav navbar-nav navigation-main">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html">Рабочий стол <span class="sr-only">(текущий)</span></a>
+          <a href="#" class="nav-link">Рабочий стол <span class="sr-only">(текущий)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Встречи клуба</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="books.html">Книги</a>
+          <a class="nav-link" href="books">Книги</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="speakers.html">Спикеры</a>
