--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,48 +1,49 @@
 <div class="h-100">
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">
+    {{#link-to "index" class="navbar-brand"}}
       <img src="assets/images/logo-dark.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
-        Книжный клуб
-    </a>
+      Книжный клуб
+    {{/link-to}}
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Открыть меню">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarContent">
       <ul class="nav navbar-nav navigation-main">
         <li class="nav-item active">
-          <a href="#" class="nav-link">Рабочий стол <span class="sr-only">(текущий)</span></a>
+          {{#link-to "index" class="nav-link"}}Рабочий стол <span class="sr-only">(текущий)</span>{{/link-to}}
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Встречи клуба</a>
+          {{#link-to "index" class="nav-link"}}Встречи клуба{{/link-to}}
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="books">Книги</a>
+          {{#link-to "book" class="nav-link"}}Книги{{/link-to}}
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="speakers.html">Спикеры</a>
+          {{#link-to "speaker" class="nav-link"}}Спикеры{{/link-to}}
         </li>
         <li class="nav-item">
-          <a class="nav-link text-success" href="#">Оставить заявку</a>
+          {{#link-to "index" class="nav-link"}}Оставить заявку{{/link-to}}
         </li>
         <li class="nav-item">
-          <a class="nav-link text-primary" href="#">Запланировать встречи</a>
+          {{#link-to "index" class="nav-link"}}Запланировать встречи{{/link-to}}
         </li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Войти</a>
+          {{#link-to "index" class="nav-link"}}Войти{{/link-to}}
         </li>
       </ul>
     </div>
   </nav>
 
-  <div class="container h-100">
+
+  <div class="h-100">
     {{outlet}}
   </div>
 
   <footer class="footer">
-    <div class="container">
-        <span>&copy; Skyori, 2020</span>
-    </div>
-  </footer>
+		<div class="container">
+		  	<span>&copy; Skyori, 2020</span>
+		</div>
+	</footer>
 </div>
