--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -16,7 +16,7 @@
           {{#link-to "index" class="nav-link"}}Встречи клуба{{/link-to}}
         </li>
         <li class="nav-item">
-          {{#link-to "book" class="nav-link"}}Книги{{/link-to}}
+          {{#link-to "book.index" class="nav-link"}}Книги{{/link-to}}
         </li>
         <li class="nav-item">
           {{#link-to "speaker" class="nav-link"}}Спикеры{{/link-to}}
