--- a/app/templates/book.hbs
+++ b/app/templates/book.hbs
@@ -1,3 +1,27 @@
 <div class="htop">
   <h2 class="text-center">Книги</h2>
+
+  <div class="panel-heading">
+    <div class="search">
+      {{input type="text" placeholder="Найти по полям" value=search}}
+    </div>
+
+    {{#link-to "author.create" class="btn-new"}}
+      <div class="sr-only">Add new Author</div>
+    {{/link-to}}
+  </div>
+
+  <div class="panel-content">
+    {{#if isLoading}}
+      <div class="welcome-page">
+        <img src="assets/images/loading.gif" alt="Welcome">
+      </div>
+    {{else}}
+    <ul class="collection">
+      {{#each model as |author|}}
+        {{author-item firstName=author.firstName lastName=author.lastName idAuthor=author.id tagName='li'}}
+      {{/each}}
+    </ul>
+    {{/if}}
+  </div>
 </div>
