--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -29,10 +29,26 @@
         </li>
       </ul>
       <ul class="nav navbar-nav">
-        <li class="nav-item">
-          {{#link-to "index" class="nav-link"}}Войти{{/link-to}}
-        </li>
+        {{#if session.isAuthenticated}}
+          <li class="nav-item">
+            <a href="#" onclick={{action "logout"}}>Logout</a>
+          </li>
+        {{else}}
+          <li class="nav-item">
+            {{#link-to "register" class="nav-link"}}Sign-up{{/link-to}}
+          </li>
+          <li class="nav-item">
+            {{#link-to "login" class="nav-link"}}Sign-in{{/link-to}}
+          </li>
+        {{/if}}
       </ul>
+
+      {{#if session.isAuthenticated}}
+        <div class="current-user">
+          Hello, <strong>{{currentUser.user.username}}</strong>
+          {{!-- Hello, <strong>{{this.session.data.authenticated.tokenData.username}}</strong> --}}
+        </div>
+      {{/if}}
     </div>
   </nav>
 
