--- a/app/templates/components/login-form.hbs
+++ b/app/templates/components/login-form.hbs
@@ -8,11 +8,11 @@
   </div>
 
   <div class="field">
-    <label>Password:</label>
+    <label>Пароль:</label>
     {{input type="password" placeholder="Password" value=password}}
   </div>
 
   <div class="form-footer">
-    <button type="submit" class="btn-submit">login</button>
+    <button type="submit" class="btn-submit">Войти</button>
   </div>
 </form>
