--- a/app/templates/register.hbs
+++ b/app/templates/register.hbs
@@ -1,9 +1,9 @@
-<div class="slide-out">
-  <div class="slide-out-card">
+<div class="slide-out htop">
+  <div class="slide-out-card col text-center">
 
     <div class="slide-out-heading">
       <div class="title">
-        <h3>Register</h3>
+        <h3>Регистрация</h3>
       </div>
     </div>
 
