--- a/app/templates/book/edit.hbs
+++ b/app/templates/book/edit.hbs
@@ -1,19 +1,4 @@
-<div class="modal fade" id="editBook" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <h2 class="modal-title" id="myModalLabel">Редактирование книги</h2>
-      </div>
-      <div class="modal-body">
-        {{yield}}
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
-        <button type="button" class="btn btn-primary">Сохранить</button>
-      </div>
-    </div>
-  </div>
-</div>
+{{#modal-window title="Редактировать книгу" size="modal-sm" save='save' close='removeModal'}}
+  {{#book-form model}}
+  {{/book-form}}
+{{/modal-window}}
