--- a/app/templates/components/book-form.hbs
+++ b/app/templates/components/book-form.hbs
@@ -1,7 +1,4 @@
-<form class="edit-form" onsubmit={{action "saveBook"}}>
-  <div class="field">
-    <label>Название:</label>
-    {{input type="text" placeholder="Title" value=title}}
-  </div>
+<form {{action 'save' on='submit'}}>
+  {{input type="text" value=title class="form-control"}}
 
 </form>
