Homework #3. Modal window added

--- a/app/templates/book/edit.hbs
+++ b/app/templates/book/edit.hbs
@@ -1,4 +1,2 @@
-{{#modal-window title="Редактировать книгу" size="modal-sm" save='save' close='removeModal'}}
-  {{#book-form model}}
-  {{/book-form}}
-{{/modal-window}}
+{{#bs-modal-simple title="Редактирование книги"}}
+{{/bs-modal-simple}}
