--- a/app/templates/book.hbs
+++ b/app/templates/book.hbs
@@ -10,9 +10,9 @@
     <ul class="row row-cols-1 row-cols-md-3 fix-margin">
       {{#each model as |book|}}
         {{book-item book=book}}
-        {{outlet 'modal'}}
       {{/each}}
     </ul>
+    {{outlet}}
     {{/if}}
   </div>
 </div>
